--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,16 +9,22 @@
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
+
 <body>
     <div class="header">
         <ul>
             <li>Color Flipper</li>
-            <li>Simple Hex</li>
         </ul>
     </div>
     <div class="description">
         <div id="background-color-desc"></div>
         <button id="change">Click me!</button>
+        <button id="show-rgb">Show RGB!</button>
+        <br />
+        <div id="rgb-desc" style="display:none; float: right;"></div>
     </div>
+
+
 </body>
+
 </html>
